--- a/todolist/todolist/src/main/resources/application.properties
+++ b/todolist/todolist/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/springboot
+spring.datasource.url=jdbc:mysql://localhost:3306/todolist
 spring.datasource.username=root
 spring.datasource.password=2001
 
