--- a/todolist/todolist/src/main/resources/application.properties
+++ b/todolist/todolist/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=2001
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+MYSQL_URL="mysql://root:qZXmVzdcFArQSg6ujdZ3@containers-us-west-184.railway.app:7850/railway"
