--- a/todolist/todolist/src/main/resources/application.properties
+++ b/todolist/todolist/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-MYSQL_URL="${{mysql://root:qZXmVzdcFArQSg6ujdZ3@containers-us-west-184.railway.app:7850/railway}}"
+spring.datasource.url=jdbc:mysql://localhost:3306/todolist
+spring.datasource.username=root
+spring.datasource.password=2001
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
