--- a/todolist/todolist/src/main/resources/application.properties
+++ b/todolist/todolist/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=mysql://root:qZXmVzdcFArQSg6ujdZ3@containers-us-west-184.railway.app:7850/railway
+spring.datasource.url=jdbc:mysql://root:qZXmVzdcFArQSg6ujdZ3@containers-us-west-184.railway.app:7850/railway
 spring.datasource.username=root
 spring.datasource.password=qZXmVzdcFArQSg6ujdZ3
 spring.jpa.hibernate.ddl-auto=update
