--- a/todolist/todolist/src/main/resources/application-prod.yml
+++ b/todolist/todolist/src/main/resources/application-prod.yml
@@ -9,8 +9,8 @@ spring:
           dialect: org.hibernate.dialect.MySQLDialect
 
     url: ${MYSQL_URL}
-    username: ${MYSQL_USERNAME}
-    password: ${MYSQL_PASSWORD}
+    username: ${MYSQLUSER}
+    password: ${MYSQLPASSWORD}
 
 
 
