--- a/todolist/todolist/src/main/resources/application-prod.yml
+++ b/todolist/todolist/src/main/resources/application-prod.yml
@@ -1,5 +1,6 @@
 spring:
   datasource:
+    url: ${jdbc:mysql://root:qZXmVzdcFArQSg6ujdZ3@containers-us-west-184.railway.app:7850/railway}
 
     jpa:
       hibernate:
@@ -8,11 +9,6 @@ spring:
         hibernate:
           dialect: org.hibernate.dialect.MySQLDialect
 
-    url: ${MYSQL_URL}
-    username: ${MYSQLUSER}
-    password: ${MYSQLPASSWORD}
-    port-number: ${MYSQLPORT}
-    database-name: ${MYSQLDATABASE}
 
 
 
