--- a/todolist/todolist/src/main/resources/application-prod.yml
+++ b/todolist/todolist/src/main/resources/application-prod.yml
@@ -11,6 +11,16 @@ spring:
         hibernate:
           dialect: org.hibernate.dialect.MySQLDialect
 
+springdoc:
+  swagger-ui:
+    path: /swagger-ui/index.html
+
+server:
+  forward-headers-strategy: framework
+  servlet:
+    context-path: https://todolist-api-production-ebdf.up.railway.app
+
+
 
 
 
