--- a/todolist/todolist/src/main/resources/application-prod.yml
+++ b/todolist/todolist/src/main/resources/application-prod.yml
@@ -18,7 +18,7 @@ springdoc:
 server:
   forward-headers-strategy: framework
   servlet:
-    context-path: /todolist-api-production-ebdf.up.railway.app
+    context-path: https://todolist-api-production-ebdf.up.railway.app
 
 
 
