--- a/todolist/todolist/src/main/resources/application-prod.yml
+++ b/todolist/todolist/src/main/resources/application-prod.yml
@@ -1,15 +1,32 @@
 spring:
+  security:
+    require-ssl: true
+
   datasource:
     url: jdbc:mysql://${PROD_DB_HOST}:${PROD_DB_PORT}/${PROD_DB_NAME}
     username: ${PROD_DB_USERNAME}
     password: ${PROD_DB_PASSWORD}
-
     jpa:
       hibernate:
         ddl-auto: update
       properties:
         hibernate:
           dialect: org.hibernate.dialect.MySQLDialect
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui/index.html
+
+server:
+  forward-headers-strategy: framework
+  servlet:
+    context-path: /
+
+
+
+
+
+
 
 
 
